--- a/P_1/1.md
+++ b/P_1/1.md
@@ -1,1 +1,4 @@
+![image](https://user-images.githubusercontent.com/55356699/203157208-2e2e2672-90f4-424f-841f-8d0fbd0fd42d.png)
+
+
 ![image](https://user-images.githubusercontent.com/55356699/203156756-dca78ff0-e8e5-49c8-8350-b7ead7ad53fb.png)
